<resources>
    <string name="app_name">BDFInanceInternshipApp</string>
    <string name="bd_finance">BD Finance</string>
    <string name="email">Email</string>
    <string name="email_edittext_hint">eg: your name@bdfinance.net</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_password_hint">******</string>

    <string-array name="Profession_list">
        <item>Doctor</item>
        <item>Engineer</item>
        <item>Officer</item>
    </string-array>
    <string name="title_activity_product">ProductActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>